--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="app.css" charset="utf-8">
   </head>
   <body>
-    <h3 id="room-name">You haven't joined a chat yet.</h3>
+    <div id="room-dwellers"></div>
 
     <ul id="messages"></ul>
 
